--- a/editor/editorwindow.ui
+++ b/editor/editorwindow.ui
@@ -149,7 +149,7 @@
            </size>
           </property>
           <property name="currentIndex">
-           <number>0</number>
+           <number>1</number>
           </property>
           <widget class="QWidget" name="normalTab">
            <attribute name="title">
@@ -254,6 +254,9 @@
                <widget class="QSlider" name="nBulletVelocity">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="tickPosition">
+                 <enum>QSlider::TicksAbove</enum>
                 </property>
                </widget>
               </item>
@@ -479,6 +482,9 @@
                <widget class="QSlider" name="mAmount">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="tickPosition">
+                 <enum>QSlider::TicksAbove</enum>
                 </property>
                </widget>
               </item>
